@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  [Enhancements]
+  - Append the netblock from the configuration to the log message when a request is blocked.
+
+    Note that this might be an incompatible change if you are parsing the logs for fail2ban rules.
 
 v0.2.2    2022-11-16 21:35:26+00:00 Europe/London
   [Tests]
